# ML-in-C

./: .gitignore  README.md  mathematical_foundations.md
.bin/: mlp_V1.cu  mlp_V2.cu  plot_losses.py
src/MLP/: Makefile  mlp.h
src/c/: CMakeLists.txt  data_loader.c  data_loader.h  main.c
src/c/models/mlp/: CMakeLists.txt  mlp.cu  mlp.h  mlp_cpu.c
src/data/: iris_processed.txt
src/python/: setup.py
src/python/models/mlp/: mlp.py
src/scripts/: build_run_c_CPU.sh  download_datasets.sh  preprocess_iris.py  run_pipeline.sh
